--- a/Marindeck/View/Base.lproj/Main.storyboard
+++ b/Marindeck/View/Base.lproj/Main.storyboard
@@ -132,22 +132,22 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="TestAccount" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eai-3F-GbR">
-                                <rect key="frame" x="25" y="140" width="230" height="26"/>
+                                <rect key="frame" x="25" y="140" width="230" height="25.333333333333343"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="21"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@twitter" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QZQ-Zj-807">
-                                <rect key="frame" x="25" y="168" width="230" height="18"/>
+                                <rect key="frame" x="25" y="167.33333333333334" width="230" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3Ba-KR-x9x">
-                                <rect key="frame" x="12" y="218" width="256" height="509"/>
+                                <rect key="frame" x="12" y="217.33333333333334" width="256" height="509.66666666666663"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="equalSpacing" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="21c-6I-ALx">
-                                        <rect key="frame" x="0.0" y="0.0" width="256" height="220"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="256" height="276"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="47l-ux-vNe" customClass="MenuItemView" customModule="Marindeck" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="0.0" width="256" height="52"/>
@@ -161,7 +161,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KGg-ez-ShH" customClass="MenuItemView" customModule="Marindeck" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="56" width="256" height="52"/>
+                                                <rect key="frame" x="0.0" y="55.999999999999972" width="256" height="52"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="52" id="ubE-wy-SkR"/>
@@ -172,7 +172,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AsG-wW-U0B" customClass="MenuItemView" customModule="Marindeck" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="112" width="256" height="52"/>
+                                                <rect key="frame" x="0.0" y="111.99999999999997" width="256" height="52"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="52" id="xDf-oP-Vrs"/>
@@ -183,14 +183,25 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ecm-OG-a3r" customClass="MenuItemView" customModule="Marindeck" customModuleProvider="target">
-                                                <rect key="frame" x="0.0" y="168" width="256" height="52"/>
+                                                <rect key="frame" x="0.0" y="167.99999999999997" width="256" height="52"/>
                                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="52" id="Cj5-zc-2S9"/>
                                                 </constraints>
                                                 <userDefinedRuntimeAttributes>
-                                                    <userDefinedRuntimeAttribute type="string" keyPath="title" value="Twitterの設定"/>
-                                                    <userDefinedRuntimeAttribute type="image" keyPath="iconImage" value="rectangle.stack.fill" catalog="system"/>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="title" value="Twitter設定"/>
+                                                    <userDefinedRuntimeAttribute type="image" keyPath="iconImage" value="TwitterLogo"/>
+                                                </userDefinedRuntimeAttributes>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="osq-5q-bgt" customClass="MenuItemView" customModule="Marindeck" customModuleProvider="target">
+                                                <rect key="frame" x="0.0" y="223.99999999999997" width="256" height="52.000000000000028"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="52" id="GBS-gV-9Mc"/>
+                                                </constraints>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="title" value="TweetDeck設定"/>
+                                                    <userDefinedRuntimeAttribute type="image" keyPath="iconImage" value="TwitterLogo"/>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                         </subviews>
@@ -237,6 +248,7 @@
                         <outlet property="profileMenu" destination="47l-ux-vNe" id="R7N-Rx-qZa"/>
                         <outlet property="reloadMenu" destination="KGg-ez-ShH" id="l1R-pu-OTi"/>
                         <outlet property="settingsButton" destination="nyB-cX-Xhh" id="xBE-gv-x0s"/>
+                        <outlet property="tdSettingsMenu" destination="osq-5q-bgt" id="mtv-Rl-Y0j"/>
                         <outlet property="twitterSettingsMenu" destination="ecm-OG-a3r" id="YCk-nt-gIf"/>
                         <outlet property="userIconImageView" destination="H9N-or-ZyM" id="3kN-fk-HkY"/>
                     </connections>
@@ -247,6 +259,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="TwitterLogo" width="248" height="204"/>
         <image name="arrow.clockwise" catalog="system" width="115" height="128"/>
         <image name="gearshape" catalog="system" width="128" height="121"/>
         <image name="person" catalog="system" width="128" height="117"/>
