TDの画像追加ボタンとスケジュールボタン消した

--- a/Marindeck/js/marindeck.css
+++ b/Marindeck/js/marindeck.css
@@ -66,3 +66,7 @@ thanks @hakunagi
 .mdl .width--300 {
     width: auto!important;
 }
+
+.js-add-image-button, .js-scheduler {
+    display: none!important;
+}
