--- a/Marindeck/View/Settings/Settings.storyboard
+++ b/Marindeck/View/Settings/Settings.storyboard
@@ -84,13 +84,16 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="settings.tweetButtonBehavior.cell.title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="5" translatesAutoresizingMaskIntoConstraints="NO" id="PjC-g8-3Rp">
-                                                    <rect key="frame" x="20" y="11.5" width="287" height="21"/>
+                                                    <rect key="frame" x="20" y="11.5" width="238" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="THI-wz-SKK">
-                                                    <rect key="frame" x="307" y="4.5" width="61" height="34.5"/>
+                                                    <rect key="frame" x="258" y="4.5" width="110" height="34.5"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="110" id="ug9-2i-j7e"/>
+                                                    </constraints>
                                                     <state key="normal" title="Button"/>
                                                     <buttonConfiguration key="configuration" style="plain" title="-"/>
                                                 </button>
@@ -100,7 +103,7 @@
                                                 <constraint firstItem="THI-wz-SKK" firstAttribute="centerY" secondItem="L3X-bg-D3M" secondAttribute="centerY" id="7Hc-LK-9ZT"/>
                                                 <constraint firstAttribute="trailing" secondItem="THI-wz-SKK" secondAttribute="trailing" constant="6" id="AIk-Oc-e6S"/>
                                                 <constraint firstItem="PjC-g8-3Rp" firstAttribute="leading" secondItem="L3X-bg-D3M" secondAttribute="leadingMargin" id="Jqx-xl-D3z"/>
-                                                <constraint firstItem="THI-wz-SKK" firstAttribute="leading" secondItem="PjC-g8-3Rp" secondAttribute="trailing" id="tif-4b-JCc"/>
+                                                <constraint firstItem="THI-wz-SKK" firstAttribute="leading" secondItem="PjC-g8-3Rp" secondAttribute="trailing" id="ULB-Bs-h5c"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
